searchbar only visible on mobile searchpage, try to fix condition

--- a/Front/src/components/BottomNavigation/BottomNavigation.scss
+++ b/Front/src/components/BottomNavigation/BottomNavigation.scss
@@ -1,7 +1,7 @@
 .BottomNavigation {
     background-color: #eea14a;
     padding: 20px;
-    border-radius: 30px;
+    border-radius: 30px 30px 0 0 ;
     overflow: hidden;
     position: fixed;
     bottom: 0;
