--- a/Front/src/components/SearchBar/SearchBar.scss
+++ b/Front/src/components/SearchBar/SearchBar.scss
@@ -4,9 +4,10 @@
   width: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   &-Form {
+    display: none;
     margin: auto;
-    // position: absolute;
     height: 2.5rem;
     border: none;
     border-radius: 10px;
@@ -16,8 +17,8 @@
     padding: 0;
     padding-left: 1rem;
     font-family: 'Syncopate', sans-serif;
-    // top: 340px;
     left: 15%;
+
   }
 
   &-Button {
@@ -47,20 +48,8 @@
 }
 
 @media (max-width: 767px) {
-    /* Styles spécifiques aux appareils portables */
-      .SearchBar {
-        &-Form {
-          display: none;
-        }
-      }
-
+  /* Si on est sur la bonne URL et que nous sommes en mobile alors affiche la searchbar */
+  .SearchBar.Search-Result-Visible .SearchBar-Form {
+    display: flex;
   }
-
- @media screen and (min-width: 768px) and (max-width: 1024px) {
-    /* Styles spécifiques aux tablettes */
-    .SearchBar {
-     &-Form{
-       top: 30%;
-     }
-     }
-   }
+}
